# api-contract-monitor

./: README.md  pyproject.toml
api_contract_monitor/: cli.py  contracts.py  reporting.py  validator.py
examples/: batch-checks.json  order-status.json
tests/: test_validator.py
